i ching - better randomness
sample from ND

--- a/convolution.html
+++ b/convolution.html
@@ -16,9 +16,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org3d47933" class="outline-2">
-<h2 id="org3d47933">Convolution</h2>
-<div class="outline-text-2" id="text-org3d47933">
+<div id="outline-container-org3f8ec03" class="outline-2">
+<h2 id="org3f8ec03">Convolution</h2>
+<div class="outline-text-2" id="text-org3f8ec03">
 <p>
 Convolution is, to me at least, a really inspirational subject. Why?
 Because it can initially seem like DSP magic, but it's really not hard
@@ -46,9 +46,9 @@ bother.
 </p>
 </div>
 
-<div id="outline-container-org84a5a65" class="outline-3">
-<h3 id="org84a5a65">What can convolution do for us?</h3>
-<div class="outline-text-3" id="text-org84a5a65">
+<div id="outline-container-org7f69239" class="outline-3">
+<h3 id="org7f69239">What can convolution do for us?</h3>
+<div class="outline-text-3" id="text-org7f69239">
 <p>
 Quite a lot actually. We can use convolution to model any <b>linear time
 invariant</b> (LTI) system. Let's explore that term:
@@ -150,9 +150,9 @@ do so.
 </div>
 </div>
 
-<div id="outline-container-org5d33818" class="outline-3">
-<h3 id="org5d33818">Do LTI systems exist?</h3>
-<div class="outline-text-3" id="text-org5d33818">
+<div id="outline-container-orgfdb3fb8" class="outline-3">
+<h3 id="orgfdb3fb8">Do LTI systems exist?</h3>
+<div class="outline-text-3" id="text-orgfdb3fb8">
 <p>
 <i>"What what? You just told us that a whole heap of stuff is LTI!"</i>
 </p>
@@ -176,9 +176,9 @@ stealing the room's soul. Magic, right?
 </div>
 </div>
 
-<div id="outline-container-orgb38c069" class="outline-3">
-<h3 id="orgb38c069">OK, lets convolve!</h3>
-<div class="outline-text-3" id="text-orgb38c069">
+<div id="outline-container-org63b7d5d" class="outline-3">
+<h3 id="org63b7d5d">OK, lets convolve!</h3>
+<div class="outline-text-3" id="text-org63b7d5d">
 <p>
 Before going any further, I should point out that the mathematical
 operator for convolution is often drawn as an asterisk: * . This is a
@@ -319,9 +319,9 @@ together.</b>
 </div>
 </div>
 
-<div id="outline-container-orgaae0f60" class="outline-3">
-<h3 id="orgaae0f60">Why do we do the flip?</h3>
-<div class="outline-text-3" id="text-orgaae0f60">
+<div id="outline-container-org6edc1ac" class="outline-3">
+<h3 id="org6edc1ac">Why do we do the flip?</h3>
+<div class="outline-text-3" id="text-org6edc1ac">
 <p>
 We need to flip g because we want the <b>beginning of g</b> to meet the
 <b>beginning of f</b> first, and the <b>end of g</b> to meet the <b>end of f</b> last,
@@ -339,7 +339,7 @@ and the other as the input.
 </div>
 </div>
 
-<div id="outline-container-org9cec77a" class="outline-3">
+<div id="outline-container-org2a4a3a8" class="outline-3">
 <h3 id="impulse-responses">Impulse Responses</h3>
 <div class="outline-text-3" id="text-impulse-responses">
 <p>
