--- a/ring-modulation.html
+++ b/ring-modulation.html
@@ -38,9 +38,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org8e6a3df" class="outline-2">
-<h2 id="org8e6a3df">Ring Modulation and Frequency Shifting</h2>
-<div class="outline-text-2" id="text-org8e6a3df">
+<div id="outline-container-orgc73b6c9" class="outline-2">
+<h2 id="orgc73b6c9">Ring Modulation and Frequency Shifting</h2>
+<div class="outline-text-2" id="text-orgc73b6c9">
 <p>
 I started reading about this topic when looking for a computationally
 cheap way of doing frequency shifting. This is distinct from pitch
@@ -74,9 +74,9 @@ to it all&#x2026;
 </p>
 </div>
 
-<div id="outline-container-org38421c8" class="outline-3">
-<h3 id="org38421c8">Rethinking basic operations</h3>
-<div class="outline-text-3" id="text-org38421c8">
+<div id="outline-container-orgff7c989" class="outline-3">
+<h3 id="orgff7c989">Rethinking basic operations</h3>
+<div class="outline-text-3" id="text-orgff7c989">
 <p>
 When we think about basic mathematical operations (addition,
 subtraction, multiplication, division), our instincts are based in
@@ -96,9 +96,9 @@ basic operations.
 </p>
 </div>
 
-<div id="outline-container-org24dac37" class="outline-4">
-<h4 id="org24dac37">Addition and Subtraction</h4>
-<div class="outline-text-4" id="text-org24dac37">
+<div id="outline-container-orgaf6f0e3" class="outline-4">
+<h4 id="orgaf6f0e3">Addition and Subtraction</h4>
+<div class="outline-text-4" id="text-orgaf6f0e3">
 <p>
 Thinking about the boxes of apples and anti-apples, subtraction and
 addition are not really looking so opposite any more, in fact they are
@@ -111,9 +111,9 @@ inversed, but the auditory result is pretty similar to the addition.
 </div>
 </div>
 
-<div id="outline-container-orgeca7341" class="outline-4">
-<h4 id="orgeca7341">Multiplication shows similarity</h4>
-<div class="outline-text-4" id="text-orgeca7341">
+<div id="outline-container-org0282dd0" class="outline-4">
+<h4 id="org0282dd0">Multiplication shows similarity</h4>
+<div class="outline-text-4" id="text-org0282dd0">
 <p>
 Rather than thinking of multiplication as an increaser, I like to
 visualise it as a <i>test of similarity</i>. It seems like a strange way to
@@ -145,9 +145,9 @@ having a similar sign)</li>
 </div>
 </div>
 
-<div id="outline-container-org7982c9b" class="outline-3">
-<h3 id="org7982c9b">Adding and Multiplying signals</h3>
-<div class="outline-text-3" id="text-org7982c9b">
+<div id="outline-container-org6a7624b" class="outline-3">
+<h3 id="org6a7624b">Adding and Multiplying signals</h3>
+<div class="outline-text-3" id="text-org6a7624b">
 <p>
 So, how about we multiply some signals together? This is effectively
 ring modulation. Ring modulation gets its name from the circular
@@ -302,9 +302,9 @@ from 0 at their own speed.
 </div>
 </div>
 
-<div id="outline-container-orgee1ec28" class="outline-3">
-<h3 id="orgee1ec28">Let's get Triggy with it&#x2026;</h3>
-<div class="outline-text-3" id="text-orgee1ec28">
+<div id="outline-container-orgd30c92b" class="outline-3">
+<h3 id="orgd30c92b">Let's get Triggy with it&#x2026;</h3>
+<div class="outline-text-3" id="text-orgd30c92b">
 <p>
 We can see the concept from above taking place in these trig identities.
 </p>
@@ -380,9 +380,9 @@ shifter.
 </div>
 </div>
 
-<div id="outline-container-org6b0588c" class="outline-3">
-<h3 id="org6b0588c">SSB Modulation</h3>
-<div class="outline-text-3" id="text-org6b0588c">
+<div id="outline-container-org9067302" class="outline-3">
+<h3 id="org9067302">SSB Modulation</h3>
+<div class="outline-text-3" id="text-org9067302">
 <p>
 Here we shift gears and start looking at this all in the frequency
 domain.
@@ -447,9 +447,9 @@ what we are after is a Hilbert Transform of our input signal.
 </div>
 </div>
 
-<div id="outline-container-org21b04da" class="outline-3">
-<h3 id="org21b04da">Hilbert Transform</h3>
-<div class="outline-text-3" id="text-org21b04da">
+<div id="outline-container-org5218c3e" class="outline-3">
+<h3 id="org5218c3e">Hilbert Transform</h3>
+<div class="outline-text-3" id="text-org5218c3e">
 <p>
 The <a href="https://en.wikipedia.org/wiki/Hilbert_transform">Hilbert
 Transform</a> takes a time domain signal and returns a time domain signal
@@ -463,9 +463,9 @@ network of all-pass filters.
 </p>
 </div>
 
-<div id="outline-container-org180dcb9" class="outline-4">
-<h4 id="org180dcb9">Phase shifting with All-Pass Filters</h4>
-<div class="outline-text-4" id="text-org180dcb9">
+<div id="outline-container-orgc06d6ae" class="outline-4">
+<h4 id="orgc06d6ae">Phase shifting with All-Pass Filters</h4>
+<div class="outline-text-4" id="text-orgc06d6ae">
 <p>
 All-pass filters affect the phase spectrum of a signal without changing
 the overall energy at each frequency. The result by itself is barely
@@ -508,9 +508,9 @@ why to see why
 </div>
 </div>
 
-<div id="outline-container-org0f788c0" class="outline-3">
-<h3 id="org0f788c0">Aliasing</h3>
-<div class="outline-text-3" id="text-org0f788c0">
+<div id="outline-container-org3ebcbc9" class="outline-3">
+<h3 id="org3ebcbc9">Aliasing</h3>
+<div class="outline-text-3" id="text-org3ebcbc9">
 <p>
 If you've taken all the info above, put it together and build a
 frequency shifter then well done! You may be annoyed to hear some nasty
@@ -526,9 +526,9 @@ possible.
 </div>
 </div>
 
-<div id="outline-container-orgf5a57f8" class="outline-3">
-<h3 id="orgf5a57f8">Gotchas and stuff</h3>
-<div class="outline-text-3" id="text-orgf5a57f8">
+<div id="outline-container-orgba02812" class="outline-3">
+<h3 id="orgba02812">Gotchas and stuff</h3>
+<div class="outline-text-3" id="text-orgba02812">
 <p>
 Some weird concepts in this one. I spent a long time being concerned
 about the two sidebands overlapping, and how could you possibly isolate
