--- a/ring-modulation.html
+++ b/ring-modulation.html
@@ -38,9 +38,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-orgc73b6c9" class="outline-2">
-<h2 id="orgc73b6c9">Ring Modulation and Frequency Shifting</h2>
-<div class="outline-text-2" id="text-orgc73b6c9">
+<div id="outline-container-orgdf3591e" class="outline-2">
+<h2 id="orgdf3591e">Ring Modulation and Frequency Shifting</h2>
+<div class="outline-text-2" id="text-orgdf3591e">
 <p>
 I started reading about this topic when looking for a computationally
 cheap way of doing frequency shifting. This is distinct from pitch
@@ -74,9 +74,9 @@ to it all&#x2026;
 </p>
 </div>
 
-<div id="outline-container-orgff7c989" class="outline-3">
-<h3 id="orgff7c989">Rethinking basic operations</h3>
-<div class="outline-text-3" id="text-orgff7c989">
+<div id="outline-container-orgfd75c9f" class="outline-3">
+<h3 id="orgfd75c9f">Rethinking basic operations</h3>
+<div class="outline-text-3" id="text-orgfd75c9f">
 <p>
 When we think about basic mathematical operations (addition,
 subtraction, multiplication, division), our instincts are based in
@@ -96,9 +96,9 @@ basic operations.
 </p>
 </div>
 
-<div id="outline-container-orgaf6f0e3" class="outline-4">
-<h4 id="orgaf6f0e3">Addition and Subtraction</h4>
-<div class="outline-text-4" id="text-orgaf6f0e3">
+<div id="outline-container-org2601cc4" class="outline-4">
+<h4 id="org2601cc4">Addition and Subtraction</h4>
+<div class="outline-text-4" id="text-org2601cc4">
 <p>
 Thinking about the boxes of apples and anti-apples, subtraction and
 addition are not really looking so opposite any more, in fact they are
@@ -111,9 +111,9 @@ inversed, but the auditory result is pretty similar to the addition.
 </div>
 </div>
 
-<div id="outline-container-org0282dd0" class="outline-4">
-<h4 id="org0282dd0">Multiplication shows similarity</h4>
-<div class="outline-text-4" id="text-org0282dd0">
+<div id="outline-container-org8accc8d" class="outline-4">
+<h4 id="org8accc8d">Multiplication shows similarity</h4>
+<div class="outline-text-4" id="text-org8accc8d">
 <p>
 Rather than thinking of multiplication as an increaser, I like to
 visualise it as a <i>test of similarity</i>. It seems like a strange way to
@@ -145,9 +145,9 @@ having a similar sign)</li>
 </div>
 </div>
 
-<div id="outline-container-org6a7624b" class="outline-3">
-<h3 id="org6a7624b">Adding and Multiplying signals</h3>
-<div class="outline-text-3" id="text-org6a7624b">
+<div id="outline-container-org8ccb698" class="outline-3">
+<h3 id="org8ccb698">Adding and Multiplying signals</h3>
+<div class="outline-text-3" id="text-org8ccb698">
 <p>
 So, how about we multiply some signals together? This is effectively
 ring modulation. Ring modulation gets its name from the circular
@@ -302,9 +302,9 @@ from 0 at their own speed.
 </div>
 </div>
 
-<div id="outline-container-orgd30c92b" class="outline-3">
-<h3 id="orgd30c92b">Let's get Triggy with it&#x2026;</h3>
-<div class="outline-text-3" id="text-orgd30c92b">
+<div id="outline-container-orgea8d529" class="outline-3">
+<h3 id="orgea8d529">Let's get Triggy with it&#x2026;</h3>
+<div class="outline-text-3" id="text-orgea8d529">
 <p>
 We can see the concept from above taking place in these trig identities.
 </p>
@@ -380,9 +380,9 @@ shifter.
 </div>
 </div>
 
-<div id="outline-container-org9067302" class="outline-3">
-<h3 id="org9067302">SSB Modulation</h3>
-<div class="outline-text-3" id="text-org9067302">
+<div id="outline-container-org4ab1816" class="outline-3">
+<h3 id="org4ab1816">SSB Modulation</h3>
+<div class="outline-text-3" id="text-org4ab1816">
 <p>
 Here we shift gears and start looking at this all in the frequency
 domain.
@@ -447,9 +447,9 @@ what we are after is a Hilbert Transform of our input signal.
 </div>
 </div>
 
-<div id="outline-container-org5218c3e" class="outline-3">
-<h3 id="org5218c3e">Hilbert Transform</h3>
-<div class="outline-text-3" id="text-org5218c3e">
+<div id="outline-container-org6d9a19c" class="outline-3">
+<h3 id="org6d9a19c">Hilbert Transform</h3>
+<div class="outline-text-3" id="text-org6d9a19c">
 <p>
 The <a href="https://en.wikipedia.org/wiki/Hilbert_transform">Hilbert
 Transform</a> takes a time domain signal and returns a time domain signal
@@ -463,9 +463,9 @@ network of all-pass filters.
 </p>
 </div>
 
-<div id="outline-container-orgc06d6ae" class="outline-4">
-<h4 id="orgc06d6ae">Phase shifting with All-Pass Filters</h4>
-<div class="outline-text-4" id="text-orgc06d6ae">
+<div id="outline-container-orgb9aed59" class="outline-4">
+<h4 id="orgb9aed59">Phase shifting with All-Pass Filters</h4>
+<div class="outline-text-4" id="text-orgb9aed59">
 <p>
 All-pass filters affect the phase spectrum of a signal without changing
 the overall energy at each frequency. The result by itself is barely
@@ -508,9 +508,9 @@ why to see why
 </div>
 </div>
 
-<div id="outline-container-org3ebcbc9" class="outline-3">
-<h3 id="org3ebcbc9">Aliasing</h3>
-<div class="outline-text-3" id="text-org3ebcbc9">
+<div id="outline-container-org0467438" class="outline-3">
+<h3 id="org0467438">Aliasing</h3>
+<div class="outline-text-3" id="text-org0467438">
 <p>
 If you've taken all the info above, put it together and build a
 frequency shifter then well done! You may be annoyed to hear some nasty
@@ -526,9 +526,9 @@ possible.
 </div>
 </div>
 
-<div id="outline-container-orgba02812" class="outline-3">
-<h3 id="orgba02812">Gotchas and stuff</h3>
-<div class="outline-text-3" id="text-orgba02812">
+<div id="outline-container-orgdad8069" class="outline-3">
+<h3 id="orgdad8069">Gotchas and stuff</h3>
+<div class="outline-text-3" id="text-orgdad8069">
 <p>
 Some weird concepts in this one. I spent a long time being concerned
 about the two sidebands overlapping, and how could you possibly isolate
